Fixed align
Also added title

--- a/assets/css/credits.css
+++ b/assets/css/credits.css
@@ -28,6 +28,9 @@ footer {
 
 .libraries {
   text-align: center;
+  justify-content: center;
+  justify-self: center;
+  justify-items: center;
   display: flex;
   flex-direction: row;
 }
